[package]
name = "nexus-tui"
version = "0.2.1"
edition = "2021"
authors = ["pranav-cs-1"]
description = "A terminal-based HTTP client for API testing"
license = "MIT"
repository = "https://github.com/pranav-cs-1/nexus"
readme = "README-crates.md"
keywords = ["api", "http", "tui", "rest", "testing"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["assets/", "convert_to_gif.py"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
arboard = "3.2"

# gRPC support
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
tonic-reflection = "0.12"
tower = "0.4"
hyper = { version = "1", features = ["full"] }
http = "1"
http-body = "1"
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

